fixing the build

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ data.ms
 storageState.json
 # translation files (include default "en"), will be created during installation
 resources/lang/*.json
+composer.lock
